[package]
name = "node-diagnostics"
version = "0.1.0"
edition = "2024"

[dependencies]
libra = {git = "https://github.com/Caldo-Restaurant-Technologies/libra.git"}
thiserror = "2.0.12"
serde = "1.0.219"
control-components = {git = "https://github.com/Caldo-Restaurant-Technologies/control-components.git"}
tokio = "1.45.1"